[gd_scene load_steps=5 format=3 uid="uid://b3nj14b72r5is"]

[ext_resource type="Script" path="res://character_sheet_abilities.gd" id="1_imf3a"]
[ext_resource type="PackedScene" uid="uid://dolu2yeax6q00" path="res://organizable_list.tscn" id="2_wbklw"]
[ext_resource type="PackedScene" uid="uid://clwihkhkn1031" path="res://sortable_list.tscn" id="3_bb5fh"]
[ext_resource type="PackedScene" uid="uid://bh22nsw5l5cn7" path="res://lesson_picker.tscn" id="4_jce3e"]

[node name="CharacterSheetAbilities" type="Control"]
custom_minimum_size = Vector2(500, 700)
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 700.0
script = ExtResource("1_imf3a")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 21.0
offset_top = 9.0
offset_right = 249.0
offset_bottom = 58.0
theme_override_font_sizes/normal_font_size = 30
text = "UNIT NAME"

[node name="LevelLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 416.0
offset_top = 114.0
offset_right = 481.0
offset_bottom = 138.0
text = "level X"

[node name="LessonButton" type="Button" parent="."]
layout_mode = 0
offset_left = 327.0
offset_top = 20.0
offset_right = 480.0
offset_bottom = 91.0
text = "X lessons available"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 60.0
offset_right = 155.0
offset_bottom = 83.0
text = "Background"

[node name="ProgressBar2" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 113.0
offset_right = 400.0
offset_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 162.0
offset_right = 488.0
offset_bottom = 676.0

[node name="ActionList" parent="VBoxContainer" instance=ExtResource("2_wbklw")]
layout_mode = 2
size_flags_vertical = 3

[node name="AbilityList" parent="VBoxContainer" instance=ExtResource("3_bb5fh")]
layout_mode = 2

[node name="LessonPicker" parent="." instance=ExtResource("4_jce3e")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="LessonButton" to="." method="_on_lesson_button_pressed"]
